# EnvArena

./: LICENSE  README.md  env_registry.py  pyproject.toml  setup.py
envarena/: __init__.py  registry.py  simulator.py
envarena/cli/: main.py
envarena/envs/: __init__.py
envarena/envs/BoolQ/: env.py
envarena/envs/GuessTheNumber/: env.py
envarena/envs/MazeNavigation/: env.py  prompt.txt
envarena/envs/SocialQA/: env.py
envarena/ui/: dashboard.py
envarena/wrappers/: GeminiWrapper.py  OllamaWrapper.py  __init__.py
examples/: test_boolq.py  test_guess_number.py  test_maze.py  test_simulator.py  test_socialqa.py
