[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "envarena"
version = "0.1.0"
description = "A collection of interactive environments with UI for LLMs"
authors = [
  { name = "ZapBot" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ollama",
    "rich",
]

[tool.setuptools.packages.find]
exclude = ["examples", "tests", "docs"]
